@@ -23,7 +23,6 @@ import java.util.Optional;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
 
-import com.google.common.collect.ImmutableList;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -35,42 +34,44 @@ import static java.lang.String.format;
 import static java.util.Optional.empty;
 import static java.util.Optional.of;
 
-
 /**
  * An abstraction of System information, this class provides access to system information without specifying how
  * it is retrieved.
+ *
+ * TODO: Determine memlock limits if possible
+ * TODO: Determine if file system is remote or local
+ * TODO: Determine if disk latency is within acceptable limits
  */
 public class SystemInfo
 {
-
-    private static final long INFINITY = -1l;
-    private static final long EXPECTED_MIN_NOFILE = 10000l; // number of files that can be opened
-    private static final long EXPECTED_NPROC = 32768l; // number of processes
-    private static final long EXPECTED_AS = 0x7FFFFFFFl; // address space
     /**
      * The default number of processes that are reported if the actual value can not be retrieved.
      */
     public static final long DEFAULT_MAX_PROCESSES = 1024;
 
+    private static final Logger logger = LoggerFactory.getLogger(SystemInfo.class);
+
+    private static final long INFINITY = -1L;
+    private static final long EXPECTED_MIN_NOFILE = 10000L; // number of files that can be opened
+    private static final long EXPECTED_NPROC = 32768L; // number of processes
+    private static final long EXPECTED_AS = 0x7FFFFFFFL; // address space
     private static final Pattern SPACES_PATTERN = Pattern.compile("\\s+");
 
-    private Logger logger = LoggerFactory.getLogger(SystemInfo.class);
-
-    /* The oshi.SystemInfo has  the following note:
+    /* The oshi.SystemInfo has the following note:
      * Platform-specific Hardware and Software objects are retrieved via memoized suppliers. To conserve memory at the
      * cost of additional processing time, create a new version of SystemInfo() for subsequent calls. To conserve
      * processing time at the cost of additional memory usage, re-use the same {@link SystemInfo} object for future
      * queries.
      *
      * We are opting for minimal memory footprint. */
-    private oshi.SystemInfo si ;
+    private final oshi.SystemInfo si;
 
-    public SystemInfo() {
+    public SystemInfo()
+    {
         si = new oshi.SystemInfo();
     }
 
     /**
-     *
      * @return The name of the current platform. (e.g. Linux)
      */
     public String platform()
@@ -81,41 +82,39 @@ public class SystemInfo
     /**
      * Gets the maximum number of processes the user can create.
      * Note: if not on a Linux system this always return the
-     * @{code DEFAULT_MAX_PROCESSES} value.
+     *
      * @return The maximum number of processes.
      * @see #DEFAULT_MAX_PROCESSES
      */
-    long getMaxProcess()
+    public long getMaxProcess()
     {
-        // this check only works on Linux systems.
-        if (oshi.SystemInfo.getCurrentPlatform() == PlatformEnum.LINUX)
+        if (oshi.SystemInfo.getCurrentPlatform() != PlatformEnum.LINUX)
+            return DEFAULT_MAX_PROCESSES;
+
+        String path = format("/proc/%s/limits", getPid());
+        try
         {
-            String path = format("/proc/%s/limits", getPid());
-            try
+            for (String line : FileUtils.readLines(new File(path)))
             {
-                List<String> lines = FileUtils.readLines(new File(path));
-                for (String line : lines)
+                if (line.startsWith("Max processes"))
                 {
-                    if (line.startsWith("Max processes"))
-                    {
-                        String[] parts = SPACES_PATTERN.split(line);
+                    String[] parts = SPACES_PATTERN.split(line);
 
-                        if (parts.length < 3)
-                            continue;
+                    if (parts.length < 3)
+                        continue;
 
-                        String limit = parts[2];
-                        return "unlimited".equals(limit) ? INFINITY : Long.parseLong(limit);
-                    }
+                    String limit = parts[2];
+                    return "unlimited".equals(limit) ? INFINITY : Long.parseLong(limit);
                 }
-                logger.error("'Max processes' not found in " + path);
             }
-            catch (Throwable t)
-            {
-                logger.error(format("Unable to read %s", path), t);
-            }
+            logger.error("'Max processes' not found in {}", path);
+        }
+        catch (Exception t)
+        {
+            logger.error("Unable to read {}: {}", path, t);
         }
 
-        /* return the default value for non-Linux systems.
+        /* return the default value for non-Linux systems or when parsing failed
          * can not return 0 as we know there is at least 1 process (this one) and
          * -1 historically represents infinity.
          */
@@ -124,40 +123,46 @@ public class SystemInfo
 
     /**
      * Gets the equivalent of @{code ulimit -H -n}.
+     *
      * @return The maximum number of open files allowd to the current process/user.
      */
-    long getMaxOpenFiles()
+    public long getMaxOpenFiles()
     {
         // ulimit -H -n
         return si.getOperatingSystem().getCurrentProcess().getHardOpenFileLimit();
     }
 
     /**
-     * Gets the Virtual Memory Size (VSZ). Includes all memory that the process can access, including memory that is swapped out and memory that is from shared libraries.
+     * Gets the Virtual Memory Size (VSZ). Includes all memory that the process can access,
+     * including memory that is swapped out and memory that is from shared libraries.
+     *
      * @return The amount of virtual memory allowed to be allocatedby the current process/user.
      */
-    long getVirtualMemoryMax() {
+    public long getVirtualMemoryMax()
+    {
         return si.getOperatingSystem().getCurrentProcess().getVirtualSize();
     }
 
     /**
-     *
      * @return The amount of swap space allocated on the system.
      */
-    long getSwapSize() {
+    public long getSwapSize()
+    {
         return si.getHardware().getMemory().getVirtualMemory().getSwapTotal();
     }
 
     /**
      * @return the PID of the current system.
      */
-    public long getPid() {
+    public long getPid()
+    {
         return si.getOperatingSystem().getProcessId();
     }
 
     /**
      * Tests if the system is running in degraded mode.
      * If the system is running in degraded mode this method will return textual information for the logs.
+     *
      * @return An Optional with the textual information if degraded, and empty Optional otherwise.
      */
     public Optional<String> isDegraded()
@@ -185,13 +190,8 @@ public class SystemInfo
 
         StringBuilder sb = new StringBuilder();
 
-        for (Supplier<Optional<String>> check : ImmutableList.of(expectedNumProc,
-                                                                 swapShouldBeDisabled,
-                                                                 expectedAddressSpace,
-                                                                 expectedMinNoFile))
-        {
+        for (Supplier<Optional<String>> check : List.of(expectedNumProc, swapShouldBeDisabled, expectedAddressSpace, expectedMinNoFile))
             check.get().map(sb::append);
-        }
 
         String message = sb.toString();
         return message.isEmpty() ? empty() : of(message);
@@ -199,8 +199,9 @@ public class SystemInfo
 
     /**
      * Checks if a value is invalid (i.e. value < min && value != INFINITY).
+     *
      * @param value the value to check.
-     * @param min the minimum value.
+     * @param min   the minimum value.
      * @return @{code true} if value is invalid.
      */
     private boolean invalid(long value, long min)
